<resources>
    <string name="app_name">jogo da velha app</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lalll">Leanback lalll</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="jogador1">jogador 1 |%1$s|</string>
    <string name="jogador2">jogador 2 |%1$s|</string>
    <string name="venceu">Parabéns !! voçe venceu</string>
    <string name="deuvelha">deu velha</string>
    <string name="tela_inicial">voltar ao inicio</string>
    <string name="resetar">zera placar</string>
    <string name="preferences">preferências</string>
    <string name="escolha">escolha o simbolo</string>
    <string name="velha">Jogo da Velha App</string>


    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>


</resources>