<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.JogoFragment">

    <LinearLayout
        android:id="@+id/velha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:padding="10dp"
            android:id="@+id/deuvelha"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:text="@string/deuvelha" />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/tvpalcarVelha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="0"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:padding="10dp" />




    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_jogo_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/velha">


        <TextView
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:padding="10dp"
            android:id="@+id/tv_jogador1"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:text="@string/jogador1" />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/tvpalcarjog1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="0"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:padding="10dp" />




    </LinearLayout>

    <LinearLayout

        android:id="@+id/linear_jogo_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_jogo_1">


        <TextView

            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/tv_jogador2"
            android:padding="10dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:text="@string/jogador2" />


        <TextView
            android:textColor="@color/black"
            android:id="@+id/tvpalcarjog2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="0"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:padding="10dp" />




    </LinearLayout>
    <TableLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_jogo_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

        <Button
            android:id="@+id/bt00"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bt01"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bt02"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

        <Button
            android:id="@+id/bt10"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bt11"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bt12"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="140dp"
            android:textSize="50sp"
            android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

        <Button
            android:id="@+id/bt20"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:textSize="50sp"
            android:layout_weight="1"/>

            <Button
                android:id="@+id/bt21"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <Button
            android:id="@+id/bt22"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:textSize="50sp"
            android:layout_weight="1"/>
    </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>